Fix display spacing

--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,8 @@
 .App {
   min-height: 100%;
   position: relative;
+  display: flex;
+  flex-direction: column;
 }
 
 .App-logo {
