--- a/src/components/listing_detail/ListingDetailPage.css
+++ b/src/components/listing_detail/ListingDetailPage.css
@@ -12,4 +12,5 @@
 
 .ListingDetailPage {
   background-color: ghostwhite;
+  flex-grow: 1;
 }
