--- a/src/index.css
+++ b/src/index.css
@@ -28,6 +28,9 @@ code {
    */
   position: relative;
   padding-bottom: 400px;
+  display: flex;
+  flex-direction: column;
+  flex-grow: 1;
 }
 
 .section-title {
